# blockchain-metaverse

./: .gitignore  .gitlab-ci.yml  README.md  craft.sqlite  pom.xml
Launcher/: pom.xml
Launcher/src/main/java/ru/nsu/sberlab/c_program_integration/: Block.java  BlockchainHandler.java  CProgramHandler.java  State.java
Launcher/src/main/java/ru/nsu/sberlab/cprogramintegration/: Block.java  BlockchainHandler.java  CDataExtractor.java  State.java
Launcher/src/main/java/ru/nsu/sberlab/launcher/: Launcher.java
Miscraft-code-comments/: CMakeLists.txt  server.py  world.py
Miscraft-code-comments/src/: db.c  db.h  main.c  map.c  map.h  util.c  util.h
MyCraft/: CMakeLists.txt
MyCraft/src/: config.h  main.c  map.h  util.c  util.h
blockchain/: config.txt  pom.xml
blockchain-integration/: pom.xml
blockchain-integration/src/main/java/: module-info.java
blockchain-integration/src/main/java/ru/nsu/sberlab/blockchain_interaction/: MapInteraction.java
blockchain-integration/src/main/java/ru/nsu/sberlab/blockchain_interaction/exception/: ApplicationLogError.java
blockchain-integration/src/main/java/ru/nsu/sberlab/blockchain_interaction/utils/: BlockCoordinates.java  BlockInfo.java  Coordinates.java  NodeInteraction.java  PlayerCoordinates.java
blockchain-integration/src/main/java/ru/nsu/sberlab/blockchainintegration/: MapInteraction.java
blockchain-integration/src/main/java/ru/nsu/sberlab/blockchainintegration/exception/: ApplicationLogError.java  BlockChainException.java
blockchain-integration/src/main/java/ru/nsu/sberlab/blockchainintegration/utils/: BlockCoordinates.java  BlockInfo.java  Coordinates.java  NodeInteraction.java  PlayerCoordinates.java  Utils.java
blockchain-integration/src/test/java/ru/nsu/sberlab/blockchain_interaction/: MapInteractionTest.java  UtilsTest.java
blockchain-integration/src/test/java/ru/nsu/sberlab/blockchainintegration/: MapInteractionTest.java  UtilsTest.java
blockchain-interaction/: pom.xml
blockchain-interaction/src/main/java/ru/nsu/sberlab/blockchain_interaction/: MapInteraction.java
blockchain-interaction/src/main/java/ru/nsu/sberlab/blockchain_interaction/utils/: BlockInfo.java  Coordinates.java  NodeInteraction.java  Utils.java
blockchain/src/main/java/ru/nsu/sberlab/blockchain/: NodeInteraction.java  Utils.java
blockchain/src/main/java/ru/nsu/sberlab/blockchain/blockchain_interaction/: MapInteraction.java
blockchain/src/main/java/ru/nsu/sberlab/blockchain/contracts/: MapChangesContract.java  PlayerPositionContract.java
blockchain/src/main/java/ru/nsu/sberlab/blockchain/smartcontract/: PlayerPositionContract.java
blockchain/src/main/java/ru/nsu/sberlab/contracts/utils/: BlockInfo.java  NodeInteraction.java  Utils.java
blockchain/src/test/java/ru/nsu/sberlab/blockchain/blockchain_interaction/: MapInteractionTest.java  UtilsTest.java
blockchain/src/test/java/ru/nsu/sberlab/blockchain/contracts/: MapChangesContractTest.java  PlayerPositionTest.java
blockchain/src/test/java/ru/nsu/sberlab/smartcontract/: PlayerPositionTest.java
blockchain/src/test/resources/: config.txt
blockchain_interaction/: pom.xml
blockchain_interaction/src/main/java/ru/nsu/sberlab/blockchain_interaction/: MapInteraction.java
blockchain_interaction/src/main/java/ru/nsu/sberlab/blockchain_interaction/exception/: BlockChainException.java  MapContractAlreadyExist.java  StateContractAlreadyExist.java
contracts/: pom.xml
contracts/src/main/java/ru/nsu/sberlab/: Main.java
contracts/src/main/java/ru/nsu/sberlab/contracts/: CompilationDeploying.java  Main.java  MapChangesContract.java  MapChangesSmartContract.java  MapContractAlreadyExist.java  PlayerPositionContract.java  StateContractAlreadyExist.java
contracts/src/main/java/ru/nsu/sberlab/contracts/mapcontract/: MapChangesContract.java  MapChangesSmartContract.java
contracts/src/test/java/ru/nsu/sberlab/contracts/: BlockInfoTest.java  MapChangesSmartContractTest.java
game/: CMakeLists.txt
game-integration/: pom.xml
game-integration/src/main/java/: module-info.java
game-integration/src/main/java/ru/nsu/sberlab/cprogramintegration/: DataChangeRequestTask.java
game-integration/src/main/java/ru/nsu/sberlab/gameintegration/: Launcher.java  Main.java  PlayerPositionHandler.java  StaticQueuesWrapper.java
game/JNI/: BlockchainDataRequestTask.c  BlockchainDataRequestTask.h  CDataRequestTask.c  CDataRequestTask.h  JNI_BlockchainHandler.c  JNI_BlockchainHandler.h  JNI_CDataExtractor.c  JNI_CDataExtractor.h  JNI_Launcher.c  JNI_Launcher.h  PlayerPositionHandler.c  PlayerPositionHandler.h  StartTask.c  StartTask.h  StaticQueuesWrapper.c  StaticQueuesWrapper.h
game/src/: block.c  block.h  chunk.c  chunk.h  config.h  config.h.in  db.c  db.h  game.c  game.h  game_utils.c  game_utils.h  main.c  map.c  matrix.c  matrix.h  renderer.c  renderer.h  start_game.c  start_game.h  state.h  sync_queue.c  sync_queue.h  util.c  util.h
scripts/: build-cygwin.bash  build-cygwin.bat  build-linux.bash  build-linux64.bash  build-win64.bash  build-win64.bat
src/main/java/blockchain/: BlockInformation.java  Main.java  NodeInteraction.java  Utils.java
src/main/java/blockchain/smartContract/: MapChangesSmartContract.java
src/test/java/blockchain/: BlockInformationTest.java
src/test/java/blockchain/smartContract/: MapChangesSmartContractTest.java
start-menu/: pom.xml
start-menu/src/main/java/: module-info.java
start-menu/src/main/java/ru/nsu/sberlab/startmenu/: StartApplication.java  StartController.java
start-menu/src/main/resources/: hello-view.fxml  style.css
start-menu/src/main/resources/config/: connection.properties
start-menu/src/main/resources/css/: style.css
start-menu/src/main/resources/fxml/: choice.fxml  connect.fxml  log-in.fxml  sign-up.fxml
statecontract/: pom.xml
statecontract/src/main/java/ru/nsu/sberlab/: NodeInteraction.java  Utils.java
statecontract/src/main/java/ru/nsu/sberlab/smartcontract/: NodeInteraction.java  PlayerPositionContract.java  Utils.java
statecontract/src/test/java/ru/nsu/sberlab/smartcontract/: PlayerPositionTest.java
(+36 files in other folders)
